Css Completamente optimizado, eliminacion mayor de clases

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -27,10 +27,11 @@
             <a href='@Url.Action("CrearCuenta", "Account")' class = "login-enlace"> Crear cuenta </a>
         </p>
 
-        <nav aria-label="Opciones de redes sociales">
+        <div aria-label="Opciones de redes sociales">
             <a href="#">Iniciar sesión con Google</a>
             <a href="#">Iniciar sesión con Facebook</a>
             <a href="#">Iniciar sesión con Instagram</a>
-        </nav>
+        </div>
+        <p>@ViewBag.mensaje</p>
     </article>
 </section>
