--- a/Views/Account/MostrarUsuario.cshtml
+++ b/Views/Account/MostrarUsuario.cshtml
@@ -4,7 +4,7 @@
 
    <main class="contenido-principal">
 
-   <section class="seccion-usuarios">  
+   <section>  
 @*
       <a class="links" href='@Url.Action("Cursos", "Home")'>
           <article class="usuario-tarjeta">
