--- a/Views/Home/Configuracion.cshtml
+++ b/Views/Home/Configuracion.cshtml
@@ -3,33 +3,33 @@
 }
 
 <section class="settings-page" aria-labelledby="settings-page-title">
-    <div class="settings-grid" role="list">
-        <article class="setting-card" role="listitem">
-            <div class="setting-icon" aria-hidden="true">
+    <div role="list">
+        <article class= "setting-card" role="listitem">
+            <div aria-hidden="true">
                 <img src="~/imagenes/configuracion.png" alt="" loading="lazy">
             </div>
             <a href="#" class="setting-label">Personalizar experiencia</a>
         </article>
 
         <article class="setting-card" role="listitem">
-            <div class="setting-icon" aria-hidden="true">
+            <div aria-hidden="true">
                 <img src="~/imagenes/persona.png" alt="" loading="lazy">
             </div>
             <a href="#" class="setting-label">Información personal</a>
         </article>
 
         <article class="setting-card" role="listitem">
-            <div class="setting-icon" aria-hidden="true">
+            <div aria-hidden="true">
                 <img src="~/imagenes/candado.png" alt="" loading="lazy">
             </div>
             <a href="#" class="setting-label">Privacidad y seguridad</a>
         </article>
 
         <article class="setting-card" role="listitem">
-            <div class="setting-icon" aria-hidden="true">
+            <div aria-hidden="true">
                 <img src="~/imagenes/conexiones.png" alt="" loading="lazy">
             </div>
-            <a href="#" class="setting-label">Conexiones externas</a>
+            <a href="#" class="setting-a">Conexiones externas</a>
         </article>
     </div>
 </section>
