pagina configuracion e imagen candado

--- a/Views/Home/Configuracion.cshtml
+++ b/Views/Home/Configuracion.cshtml
@@ -2,34 +2,24 @@
     ViewData["Title"] = "Configuración";
 }
 
-<section class="settings-page" aria-labelledby="settings-page-title">
-    <div role="list">
-        <article class= "setting-card" role="listitem">
-            <div aria-hidden="true">
-                <img src="~/imagenes/configuracion.png" alt="" loading="lazy">
-            </div>
-            <a href="#" class="setting-label">Personalizar experiencia</a>
-        </article>
+<section class="pagina-ajustes" aria-label="Opciones de configuración">
+    <article>
+        <img src="~/imagenes/configuracion.png" alt="Icono de engranaje" loading="lazy">
+        <a href="#">Personalizar experiencia</a>
+    </article>
 
-        <article class="setting-card" role="listitem">
-            <div aria-hidden="true">
-                <img src="~/imagenes/persona.png" alt="" loading="lazy">
-            </div>
-            <a href="#" class="setting-label">Información personal</a>
-        </article>
+    <article>
+        <img src="~/imagenes/persona.png" alt="Icono de perfil" loading="lazy">
+        <a href="#">Información personal</a>
+    </article>
 
-        <article class="setting-card" role="listitem">
-            <div aria-hidden="true">
-                <img src="~/imagenes/candado.png" alt="" loading="lazy">
-            </div>
-            <a href="#" class="setting-label">Privacidad y seguridad</a>
-        </article>
+    <article>
+        <img src="~/imagenes/candado.png" alt="Icono de candado" loading="lazy">
+        <a href="#">Privacidad y seguridad</a>
+    </article>
 
-        <article class="setting-card" role="listitem">
-            <div aria-hidden="true">
-                <img src="~/imagenes/conexiones.png" alt="" loading="lazy">
-            </div>
-            <a href="#" class="setting-a">Conexiones externas</a>
-        </article>
-    </div>
+    <article>
+        <img src="~/imagenes/conexiones.png" alt="Icono de conexiones" loading="lazy">
+        <a href="#">Conecta tu cuenta</a>
+    </article>
 </section>
