--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                 Comunidad
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Dar feedback</a></li>
+                <li><a class="dropdown-item" href='@Url.Action("Feedback", "Home")'>Dar feedback</a></li>
                 <li><a class="dropdown-item" href="#">Grupos</a></li>
               </ul>
             </li>
