--- a/Views/Account/CrearUsuario.cshtml
+++ b/Views/Account/CrearUsuario.cshtml
@@ -14,5 +14,6 @@
       <option value="no-binario">No binario</option>
     </select>
     <button type="submit">Crear usuario</button>
+    <p> @ViewBag.mensaje; </p>
   </form>
 </section>
