--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -611,7 +611,7 @@ body {
   scroll-snap-type: x proximity;
 }
 
-.SeccionCursos > div {
+.SeccionCursos div {
   width: min(340px, 94vw);
   min-height: 230px;
   padding: 24px 28px;
@@ -623,36 +623,35 @@ body {
   overflow: hidden;
 }
 
-.SeccionCursos > div::before {
-  content: "";
+.SeccionCursos div::before {
   position: absolute;
   inset: 0;
   background-size: cover;
   background-position: center;
-  filter: blur(6px);
+  filter: blur(6px);/** Borroso **/
   transform: scale(1.08);
   opacity: 0.9;
   z-index: 0;
 }
 
-.SeccionCursos > div:nth-child(1)::before { background-image: url("/imagenes/link1.png"); }
-.SeccionCursos > div:nth-child(2)::before { background-image: url("/imagenes/link2.png"); }
-.SeccionCursos > div:nth-child(3)::before { background-image: url("/imagenes/link3.png"); }
-.SeccionCursos > div:nth-child(4)::before { background-image: url("/imagenes/link4.png"); }
+.SeccionCursos div:nth-child(1)::before { background-image: url("/imagenes/link1.png"); }
+.SeccionCursos div:nth-child(2)::before { background-image: url("/imagenes/link2.png"); }
+.SeccionCursos div:nth-child(3)::before { background-image: url("/imagenes/link3.png"); }
+.SeccionCursos div:nth-child(4)::before { background-image: url("/imagenes/link4.png"); }
 
-.SeccionCursos > div > * {
+.SeccionCursos div * {
   position: relative;
   z-index: 1;
 }
 
-.SeccionCursos > div h1 {
+.SeccionCursos div h1 {
   font-size: 1.25rem;
   color: #ffffff;
   font-weight: 700;
   margin-bottom: 12px;
 }
 
-.SeccionCursos > div p {
+.SeccionCursos div p {
   color: #f4f6fb;
   font-size: 1rem;
   font-weight: 550;
@@ -660,7 +659,7 @@ body {
   text-align: center;
 }
 
-.SeccionCursos > div {
+.SeccionCursos div {
   scroll-snap-align: center;
 }
 
@@ -670,7 +669,7 @@ body {
     padding: 0 4% 10%;
   }
 
-  .SeccionCursos > div {
+  .SeccionCursos div {
     width: min(320px, 90vw);
     min-height: auto;
     padding: 22px;
