--- a/Views/Home/allPages.cshtml
+++ b/Views/Home/allPages.cshtml
@@ -17,3 +17,5 @@
 <a href='@Url.Action("PreguntasFrecuentes", "Home")'> Preguntas frecuentes </a>
 <br>
 <a href='@Url.Action("Contactos", "Home")'> Contactos </a>
+<br>
+<a href='@Url.Action("SeleccionarInstrumento", "Account")'> Seleccionar Instrumento </a>
