--- a/Views/Account/MostrarUsuario.cshtml
+++ b/Views/Account/MostrarUsuario.cshtml
@@ -45,5 +45,5 @@ else
     <div>
       <a href='@Url.Action("LogOut", "Account")' class = "accion-primaria"> Cerrar sesion </a>
     </div>
-
+    <p>@ViewBag.mensaje</p>
   </main>
