--- a/Views/Home/Contactos.cshtml
+++ b/Views/Home/Contactos.cshtml
@@ -22,6 +22,7 @@
         </article>
 
         <article class="contacto-formulario">
+        <h2> Contactanos</h2>
             <form method="post" class="contacto-form">
                 <div class="contacto-campo">
                    
