--- a/Views/Home/CancionesPopulares.cshtml
+++ b/Views/Home/CancionesPopulares.cshtml
@@ -19,33 +19,56 @@
         <div class="canciones-grid">
             @foreach (Cancion cancion in ViewBag.canciones)
             {
-            <div class="song-card">
-
-                <img src="" alt="Foto Cancion" />
-
-                <div class="song-info">
-
-                    <h3>@cancion.Titulo - @cancion.Autor</h3>
-
-                    <div class="song-meta">
-
-                        <span>@cancion.Dificultad</span>
-                        
-                        <div class="canciones-estrellas">
-                            @switch(cancion.Valoracion){
-                                case 0:<span>⭐☆☆</span>
-                                break;
-                                case 1:<span>⭐⭐☆</span>
-                                break;
-                                case 2:<span>⭐⭐⭐</span>
-                                break;
-                                default: <span>☆☆☆</span>
-                                break;
-                            }
+                @if (cancion.Titulo == "Flaca")
+                {
+                    <a href="@Url.Action("CancionesPopularesAdentroHard", "Home")" class="song-card-link">
+                        <div class="song-card">
+                            <img src="" alt="Foto Cancion" />
+                            <div class="song-info">
+                                <h3>@cancion.Titulo - @cancion.Autor</h3>
+                                <div class="song-meta">
+                                    <span>@cancion.Dificultad</span>
+                                    <div class="canciones-estrellas">
+                                        @switch(cancion.Valoracion){
+                                            case 0:<span>⭐☆☆</span>
+                                            break;
+                                            case 1:<span>⭐⭐☆</span>
+                                            break;
+                                            case 2:<span>⭐⭐⭐</span>
+                                            break;
+                                            default: <span>☆☆☆</span>
+                                            break;
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                }
+                else
+                {
+                    <div class="song-card">
+                        <img src="" alt="Foto Cancion" />
+                        <div class="song-info">
+                            <h3>@cancion.Titulo - @cancion.Autor</h3>
+                            <div class="song-meta">
+                                <span>@cancion.Dificultad</span>
+                                <div class="canciones-estrellas">
+                                    @switch(cancion.Valoracion){
+                                        case 0:<span>⭐☆☆</span>
+                                        break;
+                                        case 1:<span>⭐⭐☆</span>
+                                        break;
+                                        case 2:<span>⭐⭐⭐</span>
+                                        break;
+                                        default: <span>☆☆☆</span>
+                                        break;
+                                    }
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                }
             }
         </div>
     </section>
